# DietIBD-KG

./: .gitignore  DATA_LICENSE.md  LICENSE  README.md  backup_current_graph.py  pyproject.toml  requirements.txt  resolve_candidates.py  review_candidates.csv  review_candidates_resolved.csv
corrections/: change_log.tsv  compound_fix_labels.tsv  compound_fixes.tsv  edge_fixes_log.tsv  edge_violations.tsv  edges_corrected.tsv  fp_fixes.tsv  medium_bucket_review.tsv  nodes_corrected.preprune.bak  nodes_corrected.tsv  orphan_ids.txt  review_decisions.tsv
data/processed/: bolte_food_mappings.tsv  canonical_id_map.tsv  edges_consolidated.tsv  fodmap_classifications.tsv  foodb_chebi_mapping.tsv  foodb_compound_allowlist.tsv  gold_split_dev.tsv  gold_split_fewshot.tsv  gold_split_test.tsv  gold_standard_annotations.tsv  gold_standard_to_annotate.tsv  kegg_chebi_mapping.tsv  kegg_ibd_pathways.tsv  manual_chebi_mappings.tsv  nodes_consolidated.tsv  (+5 more)
dietibdkg/: __init__.py  config.py  embeddings.py  kg.py
docs/: objective1_embeddings_results.md  objective1_embeddings_results_v1.2.0.md  objective1_kg_qa_report.md  ontology_decisions.md  paper_methods_draft.md  phase_c_design.md  phase_c_stage4_results.md
scripts/: build_foodb_chebi_map.py  build_kegg_chebi_map.py  build_ontology_cache.py  fetch_missing_abstracts.py  fetch_pubmed.py  filter_consistent_annotations.py  filter_foodb_triples.py  fix_source_pmids.py  merge_reannotations.py  prepare_gold_standard.py  preview_foodb.py  split_gold_standard.py  verify_manual_mappings.py
src/: config.py
tests/: test_dietibdkg.py
(+50 files in other folders)
