[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dietibdkg"
version = "0.1.0"
description = "Access interface for the DietIBD-KG precision-nutrition knowledge graph for IBD"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Sharath Ravindran"}]
dependencies = [
    "neo4j>=5.0",
    "python-dotenv>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
embeddings = ["pykeen>=1.10", "torch>=2.0"]

[tool.setuptools]
packages = ["dietibdkg"]
